feat: arrumando value do status

--- a/frontend/src/components/CustomerList/customerList.module.scss
+++ b/frontend/src/components/CustomerList/customerList.module.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .customerList_container {
-  max-width: 120rem;
+  width: 120rem;
   display: flex;
   flex-direction: column;
   color: $text-color;
